force-app/src/objects/AzureADService_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>EmailDomainOverride__c</fullName>
        <description>A Sandbox connects to a different Microsoft Entra tenant compared to the Production environment. The domain configured in the &apos;Email Domain Override&apos; is appended to email addresses on Contact - and Community User records in a Sandbox.</description>
        <inlineHelpText>A Sandbox connects to a different Microsoft Entra tenant compared to the Production environment. The domain configured in the &apos;Email Domain Override&apos; is appended to email addresses on Contact - and Community User records in a Sandbox.</inlineHelpText>
        <label>Email Domain Override</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HttpRequestCalloutTimeout__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Http Request Callout Timeout</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InviteRedirectUrl__c</fullName>
        <label>Invite Redirect Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggingEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logging Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NamedCredential__c</fullName>
        <label>Named Credential</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendInvitesEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Invites Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendPrivilegesUpdateEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Privileges Update Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>AzureADService Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>IsActive__c</columns>
        <columns>LoggingEnabled__c</columns>
        <columns>NamedCredential__c</columns>
        <columns>HttpRequestCalloutTimeout__c</columns>
        <columns>SendPrivilegesUpdateEnabled__c</columns>
        <columns>SendInvitesEnabled__c</columns>
        <columns>InviteRedirectUrl__c</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>AzureADService Settings</pluralLabel>
    <validationRules>
        <fullName>Invalid_Http_Callout_Timeout_value</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( HttpRequestCalloutTimeout__c ) ||
HttpRequestCalloutTimeout__c &lt; 5000 ||
HttpRequestCalloutTimeout__c &gt; 120000</errorConditionFormula>
        <errorDisplayField>HttpRequestCalloutTimeout__c</errorDisplayField>
        <errorMessage>The Timeout value must be set between 5000 and 120000 milliseconds.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Invite_Redirect_Url</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( InviteRedirectUrl__c ) ||
!BEGINS(InviteRedirectUrl__c, &apos;https://&apos;)</errorConditionFormula>
        <errorDisplayField>InviteRedirectUrl__c</errorDisplayField>
        <errorMessage>Invalid Invite Redirect Url, it cannot be left blank and it must follow the https protocol.</errorMessage>
    </validationRules>
</CustomObject>